!meta!
title: Leaving the Digital Nest
!meta!

[h2|Leaving the Digital Nest]

[p|I am not an old person. In fact, I am quite a young person. I think (though I have little evidence to back this up, other than a vague feeling of unease) that I am one of the last generations to be born without an iphone in hand. That is certainly not to say that my childhood was without the presence of mobile technology, it absolutely had an impact on me, I just think it arrived fully in my life late enough to miss some crucial period of development.]


[p|I was thinking about this though, and realized something interesting. I just entered college, and a big part of that transition has been about visual transitions to independence: moving away from home, having to deal with food, doing your own laundry, and all the other little things. But as one of the first generations with a strong connection to things like smart phones and [i|cloud services] *makes rainbow gesture with hands*, there are all of these other signs of independence: leaving a family icloud account, setting up bank accounts that parents don't have read/write access to, and turning off tracking settings on various devices.]

[p|I'm not really sure where I'm going with this, or even how much significance I think it has, but I just think it's an interesting thing which, in the grand scheme of things, not many other people have dealt with before.]
