!meta!
title: Eating
!meta!

[h2|Restaurants]

[p|As much as I like to [a, href: "recipes.html"|cook], every once in a while I enjoy eating at a restaurant. As of 051221 I'll start recording some of my favorites, both as recomendations and so I can remember where they are :)]

[dl|
	[dt|[b|Wondee Siam]]
	[dd|Really, really good Thai. [i|792 9th Ave, New York, NY 10019]]
	
	[dt|[b|Xi'an Famous Foods]]
	[dd|Not as spicy = not as good. [i|45 Bayard St., New York, NY 10013]]
	
	[dt|[b|Cholita Linda]]
	[dd|Awesome tacos, the "Lechon" is one of my favorite sandwiches. [i|4923 Telegraph Ave, Oakland, CA 94609]]
	
	[dt|[b|Grégoire]]
	[dd|Their fried chicken sandwich is one of the best in the east bay. [i|2109 Cedar Street, Berkeley, CA 94709]]

	[dt|[b|Mariposa Coffee Bar]]
	[dd|All vegetarian sandwiches and pastries, [i|amazing] coffee, and just impecable vibes: definitely my favorite cafe in SC. [i|1010 Pacific Ave, Santa Cruz, CA]]
]
