!meta!
title: Exploring Computer Literacy
!meta!

[h2|Exploring Computer Literacy]

[fieldset|
	[legend|Note]
	[p|This is an essay I'm working on for school, but I like it enough to publish here :>]
]

[p|It hurts me to see humanity being so thoughtlessly self-destructive.]

[p|That is the point of this essay. My first revisions of were mostly data, trying to show [i|how] we're being self destructive without effectively getting at [i|why that matters to me]. Here I will try to rely less on data, and more on expressing my thoughts.]

[hr|]

[p|I love lots of things about computers. My laptop is a safe space for me; it has all the tools I need to play, it looks exactly how I want it to look, and it allows me to communicate with digital spaces in which I can express myself and converse with others. I have a website, a labor of love for two and a half years, which holds my notes, thoughts, hopes, and silly cat videos. It is beautiful, and can run on anything from the newest apple device to a nintendo 3ds. I have a second-hand ebook reader now used by me to store copies of novels, comics, and textbooks for compact offline reading. I have a small hard drive which stores hundreds of gigabytes of media - movies, tv shows, random videos, and the entirety of wikipedia - which I share with others.]

[p|But my use of these tools is tarnished by two things. One: the environmental cost of modern computing is horrifying. Two: access to information about these tools is hidden and disincentivized, because it is profitable for people to know less. Both are social issues; the first is also a technological issue, and the second is also an educational issue. ]

[p|The issue of environmental cost is both hard to conceptualize and very important. Computers need significant amounts of power to run, but also take huge amounts of power to produce. The energy required to make just one chip in a component called the RAM is equivalent to running the laptop it will be used in for 600 hours, but this chip, held in your hand, would only weigh as much as a paper clip. The entire RAM card in your computer, which is made of many small chips, took more energy to produce than the whole computer will use over its entire life (@ltm-embodied-energy).]

[p|One way to help fix this issue now is to use computers for longer. Current data show that laptops are normally used for 4 years, and powering the computer over that time only accounts for 15% of its carbon footprint (@lca-ieee). To balance out that high manufacturing cost, we need to increase how long laptops are used to 25 years (@ltm-embodied-energy).]

[p|A quarter of a century is a long time to use a computer though, so how would that even be possible when most laptops start to feel slow after only a few years? The answer to this turns out to be quite complicated - a tangled mess of economics and engineering and history. ]

[p|To start exploring the long-term usage of modern computers, what do most people really use computers for? I at least, and I think most others, really only do a few things on my laptop. Watching video media like netflix or youtube, editing text for work of some kind, and browsing the internet. A simple enough list, no? Looking at it though, these are all solved problems! Text editing was something we figured out how to do when computers were the size of whole buildings, digital video has been around for almost 40 years, and the internet is already several decades old. So why do modern computers still sometimes seem slow? The modern laptop is equal to a significant percentage of the entire world's compute power in 1985, yet still struggles if you open a few windows of google chrome!]

[p|One good answer is planned obsolesence, which is when products are purposefully designed to break over time to get consumers to buy replacements. Though you will certainly find examples of this in modern hardware (newer iPhones are a great example), most often this degradation happens in software. ]

[pre|
Next:

# my basic experience (ie things run fine)
	
# issues with the setup and anti-newcomer aspects of the community
- technical to begin with
- being new often means you get less help
- some parts of the oss communities are actively awful

# positive communities
- permacomputing as a whole
- merveilles
- inspiring to work on intersection of sustainable computing
	- personal research and documentation
	- public forum style discussion and analysis of concepts
- mnt reform and right to repair

# possible futures
- 50 year computer
- various directions I see
	- teaching about issues
	- developing alternatives
		- OSS projects which are low-power
		- website examples
		- *using* positive projects and contributing
]
