!meta!
title: Nikon F3/T
!meta!

[h2|Nikon F3/T]

[img, loading: "lazy", src: "images/inventory/f3.jpg", alt: "a black nikon F3/T"|]

[p|It's so pretty...]

[p|These are some of my favorite photos from my first ever two rolls of film! All of these photos were shot on a nikon 50mm f/1.8 lens and Kodak Portra 160 film. In hindsight that film is probably too slow for a lot of the shots I was trying to get, and as a result a bunch were either under-exposed or blurry due to the long exposures necessary.]

[div, class: "box"|
	[img, loading: "lazy", src: "images/f3/small-GRAIN.jpg", alt: "a very dark photo of a lamp over dark red flowers"|]
	[img, loading: "lazy", src: "images/f3/small-building-corner-sky.jpg", alt: "an old whitewashed wall against blue sky"|]
	[img, loading: "lazy", src: "images/f3/small-crab.jpg", alt: "a little sand crab sticking its head up out of the sand"|]
	[img, loading: "lazy", src: "images/f3/small-surf-beach.jpg", alt: "bright blue sky and ocean with a white beach in the foreground"|]
	[img, loading: "lazy", src: "images/f3/small-golden-gate.jpg", alt: "airial photo of the golden gate bridge and the marin headlands"|]
	[img, loading: "lazy", src: "images/f3/small-bus.jpg", alt: "inside a bus, stop requested sign glows orange"|]
	[img, loading: "lazy", src: "images/f3/small-mica-sand.jpg", alt: "glittering sand on fingertips in a black background"|]
	[img, loading: "lazy", src: "images/f3/small-sunset.jpg", alt: "sunset over the ocean with some star streaks in the darkening sky"|]
	[img, loading: "lazy", src: "images/f3/small-pancakes.jpg", alt: "pancakes on a blue plate steaming, next to m&m bag on the table"|]
	[img, loading: "lazy", src: "images/f3/small-fungus-log.jpg", alt: "pale orange fungus growing from a mossy oak log"|]
	[img, loading: "lazy", src: "images/f3/small-red-mushroom-1.jpg", alt: "a bright red mushroom speckled with white amid leaf litter"|]
	[img, loading: "lazy", src: "images/f3/small-red-mushroom-2.jpg", alt: "two more red mushrooms growing between dead oak leaves"|]
]
