!meta!
title: Hallow's eve 2022
!meta!

[h2|Hallow's eve 2022]

[p|On October 30th I tested out a roadflare, for my family's halloween tradition of using roadflares instead of lights or candles in our jack-o-lanterns! It worked pretty well]

[img, loading: "lazy", src: "images/flare-dith.gif", alt: "me holding a bright red roadflare above my head. It's nighttime on a paved path in the forest."|]
